# app-template

./: .travis.yml
test/: CMakeLists.txt
test/cmake/: macro_seqan3_require_test.cmake  macro_seqan3_test_component.cmake  macros_add_X_test.cmake
test/coverage/: CMakeLists.txt  README.md
